--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -32,6 +32,16 @@ pl:
     question:
       true: Tak
       false: Nie
+  errors:
+    password:
+      required: Hasło jest wymagane
+    password_confirmation:
+      different: Hasła się różnią
+      required: Powtórzenie hasła jest wymagane
+    email:
+      taken: E-mail został już zajęty
+    due_time:
+      must_be_in_the_future: Musi być w przyszłości
   helpers:
     confirm: Czy jesteś pewien?
   sessions:
@@ -43,6 +53,7 @@ pl:
       register: Zarejestruj się
   registration:
     create:
+      error: Nie udało się zarejestrować na platformie
       success: Dziękujemy za rejestrację
   registrations:
     new:
@@ -53,6 +64,7 @@ pl:
       register: Zarejestruj się
   session:
     create:
+      error: Nie udało się zalogować
       success: Zalogowano
     destroy:
       success: Wylogowano z systemu
