--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -41,9 +41,9 @@ pl:
       different: Hasła się różnią
       required: Powtórzenie hasła jest wymagane
     email:
+      invalid: E-mail jest nieprawidłowy
+      required: E-mail jest wymagany
       taken: E-mail został już zajęty
-    due_time:
-      must_be_in_the_future: Musi być w przyszłości
   helpers:
     confirm: Czy jesteś pewien?
     order:
@@ -51,14 +51,6 @@ pl:
       desc: Sortuj malejąco
     time_left: 'Pozostało: %{time}'
     past_time: 'Po czasie: %{time}'
-  sessions:
-    new:
-      register_account: Nie masz konta?
-      register: Zarejestruj się
-      title: Logowanie
-    form:
-      legend: Zaloguj się do systemu zarządzania zadaniami
-      login: Zaloguj się
   registration:
     create:
       error: Nie udało się zarejestrować na platformie
@@ -98,6 +90,14 @@ pl:
     update:
       error: Nie udało sie zaktualizować zadania
       success: Zaktualizowano zadanie
+  sessions:
+    new:
+      register_account: Nie masz konta?
+      register: Zarejestruj się
+      title: Logowanie
+    form:
+      legend: Zaloguj się do systemu
+      login: Zaloguj się
   views:
     shared:
       change_status_to:
